# libtensorflow_cc

./: CITATION.cff  LICENSE  Makefile  README.md
.github/workflows/: test.yml
docker/: .gitignore  Dockerfile
docker/.Dockerfiles/: .gitignore
docker/.Dockerfiles/2.11.0/dockerfiles/: devel-cpu-ubuntu20.Dockerfile  devel-cpu-ubuntu22.Dockerfile  devel-gpu+cu118-ubuntu20.Dockerfile  devel-gpu+cu118-ubuntu22.Dockerfile
docker/.Dockerfiles/2.11.0/dockerfiles/arm64v8/: devel-cpu-arm64v8.Dockerfile  devel-gpu-arm64v8.Dockerfile
docker/.Dockerfiles/2.11.1/dockerfiles/: devel-cpu.Dockerfile  devel-gpu.Dockerfile
docker/.Dockerfiles/2.11.1/dockerfiles/arm64v8/: devel-cpu-arm64v8.Dockerfile
docker/.Dockerfiles/2.12.0/dockerfiles/: devel-gpu.Dockerfile
docker/.Dockerfiles/2.12.0/dockerfiles/arm64v8/: devel-cpu-arm64v8.Dockerfile
docker/.Dockerfiles/2.12.1/dockerfiles/: devel-cpu.Dockerfile
docker/.Dockerfiles/2.13.0/dockerfiles/: devel-gpu+cu121.Dockerfile  devel-gpu.Dockerfile
docker/DEBIAN/: control
docker/cmake/: TensorFlowConfig.cmake
docker/patch/2.11.1/: workspace2.bzl.patch
docker/patch/2.12.1/: workspace2.bzl.patch
docker/patch/2.13.0/: workspace2.bzl.patch
example/: .gitignore  CMakeLists.txt  build-and-run-monolithic.sh  build-and-run.sh  hello_tensorflow.cpp
scripts/: .common.sh  .versions.devel.sh  .versions.run.sh  0-download-official-dockerfiles.sh  1-build-official-devel-image.sh  2-build-cpp-image.sh  3-export-libtensorflow-cc.sh  4-test-libtensorflow-cc.sh  5-print-versions.sh  6-push-image.sh
(+3 files in other folders)
